[gd_scene load_steps=14 format=2]

[ext_resource path="res://fonts/GADAQUALI.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/select_song_menu/song_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/select_song_menu/songs_container.gd" type="Script" id=3]
[ext_resource path="res://sprites/checkmark.svg" type="Texture" id=4]
[ext_resource path="res://sprites/close_button.svg" type="Texture" id=5]
[ext_resource path="res://scenes/button_color_tint/press_color_tint.gd" type="Script" id=6]
[ext_resource path="res://scenes/select_song_menu/play_button.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.713726 )

[sub_resource type="DynamicFont" id=3]
size = 160
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )
corner_radius_top_left = 150
corner_radius_top_right = 150

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.552941, 0.552941, 0.552941, 1 )
corner_radius_top_left = 150
corner_radius_top_right = 150

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 150
corner_radius_top_right = 150

[node name="SelectSongMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
custom_styles/panel = SubResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 1920.0
margin_bottom = 158.0

[node name="Title" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 1920.0
margin_bottom = 158.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 3 )
text = "Select Song"
align = 1
valign = 1

[node name="Content" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer/Content"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1900.0
margin_bottom = 898.0

[node name="Songs" type="HFlowContainer" parent="PanelContainer/VBoxContainer/Content/ScrollContainer"]
unique_name_in_owner = true
margin_right = 1880.0
margin_bottom = 878.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 40
custom_constants/hseparation = 40
script = ExtResource( 3 )
song_button_scene = ExtResource( 2 )

[node name="SongButton" parent="PanelContainer/VBoxContainer/Content/ScrollContainer/Songs" instance=ExtResource( 2 )]
margin_right = 278.0
margin_bottom = 150.0

[node name="Close" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1920.0
margin_bottom = 1080.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="CloseButton" type="TextureButton" parent="Close"]
margin_left = 1728.0
margin_right = 1920.0
margin_bottom = 192.0
size_flags_horizontal = 9
size_flags_vertical = 2
texture_normal = ExtResource( 5 )

[node name="PressColorTintNode" type="Node" parent="Close/CloseButton"]
script = ExtResource( 6 )

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -104.0
margin_top = -103.0
margin_right = 90.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 5 )

[node name="TextureRect" type="TextureRect" parent="PlayButton"]
self_modulate = Color( 0.364706, 0.87451, 0.223529, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.0
margin_top = -39.0
margin_right = 58.0
margin_bottom = 61.0
texture = ExtResource( 4 )

[node name="PlayButton" type="Node" parent="PlayButton"]
script = ExtResource( 7 )

[connection signal="double_clicked" from="PanelContainer/VBoxContainer/Content/ScrollContainer/Songs" to="PlayButton/PlayButton" method="_on_Songs_double_clicked"]
[connection signal="song_selected" from="PanelContainer/VBoxContainer/Content/ScrollContainer/Songs" to="PlayButton/PlayButton" method="_on_Songs_song_selected"]
[connection signal="pressed" from="PlayButton" to="PlayButton/PlayButton" method="_on_PlayButton_pressed"]
